# iscsi-zfs

./: .gitignore  README.md  chap.conf  pyproject.toml
debian/: .gitignore  changelog  clean  control  copyright  iscsi-zfs.dirs  iscsi-zfs.install  iscsi-zfs.links  iscsi-zfs.manpages  iscsi-zfs.postrm  iscsi-zfs@.service  py3dist-overrides  rules
debian/source/: options
docs/: iscsi-zfs.1.ronn
iscsi_zfs/: iscsi_zfs.py
zed/: all-iscsi-zfs.sh
